stoat/src/snapshots/stoat__test_harness__rebase_conflict_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 100x18
---
[0m[1m[38;2;224;108;117m[48;2;40;44;52mconflict picking c3[0m[38;2;250;250;250m[48;2;40;44;52m              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;99;109;131m[48;2;40;44;52mo take ours  t take theirs  s skip entry  Enter commit  a abort[0m[38;2;250;250;250m[48;2;40;44;52m                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[7m[38;2;40;44;52m[48;2;250;250;250m? a.rs                           [0m[38;2;99;109;131m[48;2;40;44;52m│unresolved (defaults to theirs)[0m[38;2;250;250;250m[48;2;40;44;52m                                   [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;152;195;121m[48;2;40;44;52mours[0m[38;2;250;250;250m[48;2;40;44;52m                  [0m[38;2;99;109;131m[48;2;40;44;52mancestor[0m[38;2;250;250;250m[48;2;40;44;52m              [0m[38;2;198;120;221m[48;2;40;44;52mtheirs[0m[38;2;250;250;250m[48;2;40;44;52m                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│   1 [0m[38;2;250;250;250m[48;2;40;44;52mline1            [0m[38;2;99;109;131m[48;2;40;44;52m   1 [0m[38;2;250;250;250m[48;2;40;44;52mline1            [0m[38;2;99;109;131m[48;2;40;44;52m   1 [0m[38;2;250;250;250m[48;2;40;44;52mline1            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│   2 [0m[38;2;250;250;250m[48;2;40;44;52mline2            [0m[38;2;99;109;131m[48;2;40;44;52m   2 [0m[38;2;250;250;250m[48;2;40;44;52mline2            [0m[38;2;99;109;131m[48;2;40;44;52m   2 [0m[38;2;250;250;250m[48;2;40;44;52mline2            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│.....[0m[38;2;250;250;250m[48;2;40;44;52m                 [0m[38;2;99;109;131m[48;2;40;44;52m.....[0m[38;2;250;250;250m[48;2;40;44;52m                 [0m[38;2;99;109;131m[48;2;40;44;52m   3 [0m[38;2;198;120;221m[48;2;40;44;52mline3[0m[38;2;250;250;250m[48;2;40;44;52m            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;234;133;139m[48;2;99;109;131mconflict [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────────────────────────────────────────────[0m
