stoat/src/snapshots/stoat__test_harness__rebase_reword_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: normal
size: 90x12
---
[0m[1m[38;2;198;120;221m[48;2;40;44;52mreword commit- [normal][0m[38;2;250;250;250m[48;2;40;44;52m                                                                   [0m
[0m[38;2;99;109;131m[48;2;40;44;52mi insert   h/j/k/l move   Ctrl-s save   Escape abort[0m[38;2;250;250;250m[48;2;40;44;52m                                      [0m
[0m[38;2;99;109;131m[48;2;40;44;52moriginal: c2: middle[0m[38;2;250;250;250m[48;2;40;44;52m                                                                      [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52mc2: middle[0m[7m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;250;250;250m[48;2;40;44;52m                                                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;224;108;117m[48;2;99;109;131mreword [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────────────────────────────────────[0m
