stoat/src/snapshots/stoat__test_harness__rebase_set_ops.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: d
focused: #1 of 1
mode: normal
size: 90x12
---
[0m[38;2;229;192;123m[48;2;40;44;52msquash[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mc2[0m[38;2;250;250;250m[48;2;40;44;52m c2: middle                                                                      [0m
[0m[7m[38;2;40;44;52m[48;2;250;250;250mdrop   c3 c3: tip                                                                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;99;109;131m[48;2;40;44;52mj/k move  K/J reorder  p/s/f/d set op  Enter run  q abort[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m
[0m[38;2;99;109;131m[48;2;40;44;52m2 entries, onto c1[0m[38;2;250;250;250m[48;2;40;44;52m                                                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;224;108;117m[48;2;99;109;131mrebase [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────────────────────────────────────[0m
