stoat/src/snapshots/stoat__test_harness__regex_variable_length_match_highlight.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: normal
size: 40x10
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mabc [0m[38;2;40;44;52m[48;2;229;192;123m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;40;44;52m[48;2;229;192;123m22[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;40;44;52m[48;2;229;192;123m333[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;40;44;52m[48;2;229;192;123m4444[0m[38;2;250;250;250m[48;2;40;44;52m end               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m search-test buf.txt [0m[38;2;99;109;131m[48;2;99;109;131m─────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:5 [0m
